
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/05/21 12:35:00 EDT
Tag: blume-20020521-cmdoc
Description:

CM documentation update.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/05/21 10:55:00 EDT
Tag: blume-20020521-misc
Description:

- John tweaked runtime to be silent on heap export (except when
  GC messages are on).
- I added a few more things (cross-compiling versions of CMB) to
  config/preloads (as suggestions).

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/05/20 22:25:00 EDT
Tag: blume-20020520-controls
Description:

- Added ControlUtil structure to control-lib.cm.
- Use it throughout.
- Used Controls facility to define MLRISC controls (as opposed to
  registering MLRISC control ref cells with Controls after the fact)
- Fixed messed-up controls priorities.

* Removed again all the stuff from config/preloads that one wouldn't
  be able to preload at the time the initial heap image is built.
  (Many libraries, e.g., CML, do not exist yet at this time.  The
   only libraries that can be preloaded via config/preloads are those
   that come bundled with the bootfiles.)

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/05/20 10:59:00 EDT
Tag: blume-20020520-preloads
Description:

Added a lot of commented-out suggestions for things to be included
in config/preloads.

----------------------------------------------------------------------
Name: Allen Leung
Date: 2002/05/18 14:20:00 EDT
Tag: leunga-20020518-mdl
Description:
