@@ -23,6 +23,7 @@
 <dt>Summary:
 <dd>Important bug fixes, improvements to libraries, FFI generator,
     and installer.</dd>
+</dl>
 
 <hr>
 
