@@ -1,1 +1,1 @@
-ftp://ftp.research.bell-labs.com/dist/smlnj/working/bootfiles/blume-110393/
+ftp://ftp.research.bell-labs.com/dist/smlnj/working/110.40/
